# openweightBench

./: .env.example  .gitignore  README.md  pyproject.toml  run_pipeline.sh
assets/niah/: kapitel_01_gottlieb_und_malineken.txt  kapitel_02_das_geheimnis_der_insel.txt  kapitel_03_die_prinzessin_vom_see.txt  kapitel_04_der_schneider_haegelin.txt  kapitel_05_die_heimat_des_schweinetreibers.txt
assets/tool_use/: config.json  fizzbuzz.py  inventory.py  notes.md  users.json
data/: model_meta.json  vendors.json
docs/: index.html
docs/benchmarks/: coding.html  diagram_to_svg.html  hallucination.html  instruction_following.html  niah.html  nonsense.html  tool_use.html  vision.html
docs/models/: allenai_olmo-3-32b-think.html  bytedance_seed-oss-36b.html  glm-4.5-air-mlx.html  google_gemma-3-12b.html  google_gemma-3-27b.html  google_gemma-3-4b.html  google_gemma-3n-e4b.html  google_gemma-4-26b-a4b.html  google_gemma-4-26b-a4b@q8_0.html  google_gemma-4-31b.html  google_gemma-4-31b@q8_0.html  google_gemma-4-e2b.html  google_gemma-4-e2b@q8_0.html  google_gemma-4-e4b.html  google_gemma-4-e4b@q8_0.html  ibm_granite-4-h-tiny.html  liquid_lfm2-24b-a2b.html  liquid_lfm2.5-1.2b.html  meta_llama-3.3-70b.html  microsoft_phi-4-reasoning-plus.html  mistralai_devstral-small-2-2512.html  mistralai_ministral-3-14b-reasoning.html  nvidia_nemotron-3-nano-4b.html  nvidia_nemotron-3-nano-omni.html  nvidia_nemotron-3-nano.html  (+30 more)
prompts/: comprehension.json  hallucination.json  instruction_following.json  nonsense.json  summarization.json  tool_use.json
scripts/: gen_landing_images.py
(+951 files in other folders)
